# Blockchain-Spare-Parts-Management

./: .env.example  .gitignore  LICENSE  README.md  ape-config.yaml  docker-compose.yml  main.py  pyproject.toml
contracts/: MaritimeLog.sol
ethereum-backend/: Dockerfile  pyproject.toml
ethereum-backend/contracts/: MaritimeLog.sol
ethereum-backend/scripts/: deploy.py  run_sepolia.sh  run_sepolia_deployment.sh
ethereum-backend/src/api/: main.py  schemas.py
ethereum-backend/src/app/: initial_data.py  maritime_manager.py  security.py  utils.py
ethereum-backend/tests/app/: conftest.py  test_initial_data.py  test_maritime_manager.py  test_security.py  test_utils.py
ethereum-backend/tests/contract/: test_data_integity.py  test_log_service_event.py  test_maritime.py  test_register_part.py  test_time_and_warranty.py
ethereum-backend/tests/contracts/: test_register_part.py
ethereum-spare-part-management/: ape-config.yaml  api.py  main.py  pyproject.toml  setup.py
ethereum-spare-part-management/scripts/: deploy.py
ethereum-spare-part-management/src/: maritime_manager.py  utils.py
ethereum-spare-part-management/src/api/: main.py  schemas.py
ethereum-spare-part-management/src/app/: database.py  maritime_manager.py  utils.py
ethereum-spare-part-management/tests/contracts/: test_maritime_access.py  test_time_and_warranty.py
ethereum_backend/: pyproject.toml  setup.py
ethereum_backend/src/app/: models.py  security.py
ethereum_backend/tests/contracts/: test_data_integity.py
frontend/: Dockerfile  app.py  pyproject.toml  setup.py
spare-part-management/: ape-config.yaml  api.py  main.py  pyproject.toml
spare-part-management/contracts/: MaritimeLog.sol
spare-part-management/scripts/: seed_data.py
spare-part-management/src/: maritime_manager.py
spare-part-management/tests/contracts/: test_logServiceEvent.py  test_maritime.py
vechain-backend/: Dockerfile  main.py  pyproject.toml  setup.py
vechain-backend/contracts/: MaritimeLog.sol
vechain-backend/scripts/: compile.py  deploy.py  fund_users.py  generate_wallets.py  run_vechain_deployment.sh
vechain-backend/src/api/: main.py  schemas.py
vechain-backend/src/app/: database.py  initial_data.py  maritime_manager.py  models.py  security.py
vechain-backend/src/app/utils/: transfer.py  vechain_utils.py
vechain-backend/tests/app/: conftest.py  test_initial_data.py  test_maritime_manager.py  test_security.py
vechain-backend/tests/app/utils/: test_transfer.py  test_vechain_utils.py
vechain-backend/tests/contracts/: conftest.py  test_full_scenario.py  test_log_service_event.py  test_maritime_access.py  test_register_part.py  test_time_and_warranty.py
vechain-backend/tests/utils/: test_vechain_utils.py
