[project]
name = "vechain-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "py-solc-x>=2.0.5",
    "requests>=2.32.5",
    "setuptools>=80.9.0",
    "thor-devkit>=1.0.14",
    "vechain-thor-devkit>=1.1.2",
]
