[project]
name = "vechain-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bcrypt==3.2.0",
    "cryptography>=46.0.3",
    "dotenv>=0.9.9",
    "eth-abi>=2.1.1",
    "fastapi>=0.125.0",
    "passlib>=1.7.4",
    "py-solc-x>=2.0.5",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "setuptools>=80.9.0",
    "sqlmodel>=0.0.27",
    "thor-devkit>=1.0.14",
    "uvicorn>=0.38.0",
    "vechain-thor-devkit>=1.1.2",
    "web3>=5.23.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:pkg_resources is deprecated:UserWarning",
    "ignore:invalid escape sequence:DeprecationWarning",
    "ignore:The toolz.compatibility module:DeprecationWarning",
]
